--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,8 +14,8 @@ menu:
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
 - {icon: 'github',     link: 'https://www.github.com/IIIBreakeRIII'}
-  # - {icon: 'twitter',    link: 'https://twitter.com/paululele'}
 - {icon: 'linkedin',   link: 'http://www.linkedin.com/in/hyeonsoryu/'}
+- {icon: 'instagram',  link: 'https://www.instagram.com/1intheworld_hs.ryu__'}
 - {icon: 'envelope',   link: 'mailto:ryu990305@icloud.com'}
 - {icon: 'rss-square', link: '/feed.xml'}
 # - {icon: 'rss-square', link: '/rss-feed.xml'}
